connect weather&location api

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ REACT_APP_STORAGE_BUCKET="weatherapp-541fa.appspot.com"
 REACT_APP_MESSAGING_SENDER_ID="1080705144959"
 REACT_APP_APP_ID="1080705144959"
 REACT_APP_MEASUREMENT_ID=
+# REACT_APP_GEO_KEY="80f1e9745162b54d61b7217c2c02fb6c"
+REACT_APP_GEO_KEY="531988558923006520269x72752"
